<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="action_settings">Settings</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_title_label">Title</string>
    <string name="date_picker_title">Date of Crime:</string>
    <string name="new_crime">New crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="tv_list_empty">Список пуст!</string>
    <string name="button_add_crime">Add Crime!</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_suspect_call">Call Suspect!</string>
    <string name="crime_suspect_empty">Have not suspect!</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s!
The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
</resources>
